<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >
    <de.hdodenhof.circleimageview.CircleImageView

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/image"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <androidx.cardview.widget.CardView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#0B2B26"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:text="Name Field"
                    android:id="@+id/nameTextField"
                    style="@style/dataBase_textField"

                    />
                <TextView
                    android:id="@+id/nameField"
                    style="@style/displayField"
                    android:text="FullName"
                    />



            </LinearLayout>
            <ImageView

                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:src="@drawable/rectangle">
            </ImageView>
            <LinearLayout
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email Field"
                    style="@style/dataBase_textField"
                    />
                <TextView
                    android:id="@+id/emailField"
                    style="@style/displayField"
                    android:text="Email"
                    />

            </LinearLayout>
            <ImageView

                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:src="@drawable/rectangle">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phoneTextField"
                    android:text="PhoneNumber Field"
                    style="@style/dataBase_textField"
                    />
                <TextView
                    android:id="@+id/phoneField"
                    style="@style/displayField"
                    android:text="PhoneNumber"

                    />

            </LinearLayout>
            <ImageView

                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:src="@drawable/rectangle">
            </ImageView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/genderTextField"
                    style="@style/dataBase_textField"
                    android:text="Gender Field"

                    />
                <TextView
                    android:id="@+id/genderField"
                    android:text="Gender"
                    style="@style/displayField"
                    />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>