<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Register"
        android:textColor="#0B2B26"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <LinearLayout
        android:layout_width="384dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            style="@style/InputField"
            android:text=""
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:hint="fullname" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            style="@style/InputField"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_mail"
            android:hint="Email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            style="@style/InputField"
            android:drawableLeft="@drawable/ic_baseline_add_ic_call"
            android:hint="PhoneNumber"
            android:inputType="textPersonName|phone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="4"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/sex"
                android:layout_margin="15dp"
                android:dropDownSelector="@drawable/ic_baseline_person_24"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Sex">

            </Spinner>




        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1.5"
                android:inputType="textVisiblePassword"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="Password" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="Confirm Password"
                android:inputType="textVisiblePassword"/>
        </LinearLayout>

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingTop="20dp"
            android:paddingRight="50dp"
            android:paddingBottom="20dp"
            android:text="Register"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>